--- a/bazel/constraints/BUILD
+++ b/bazel/constraints/BUILD
@@ -15,6 +15,11 @@ constraint_value(
 )
 
 constraint_value(
+    name = "atmega64m1",
+    constraint_setting = ":mcu",
+)
+
+constraint_value(
     name = "atmega328p",
     constraint_setting = ":mcu",
 )
