Fix boolean test case

--- a/projects/can_api/tests/tx_only.yml
+++ b/projects/can_api/tests/tx_only.yml
@@ -9,8 +9,8 @@ publish:
         unit:
           type: bool
           values:
-            t: OK
-            f: FAULT
+            t: FAULT
+            f: OK
       - name: example_16_bit
         slice: 8 + 16
         unit:
