--- a/vehicle/mkv/software/brakelight_bspd/BUILD
+++ b/vehicle/mkv/software/brakelight_bspd/BUILD
@@ -1,4 +1,9 @@
+load("//bazel/tools:defs.bzl", "can_api_files")
 load("//bazel:defs.bzl", "cc_firmware")
+
+exports_files([
+    "bspd.yml",
+])
 
 cc_firmware(
     name = "bspd",
@@ -11,9 +16,15 @@ cc_firmware(
     ],
     visibility = ["//visibility:public"],
     deps = [
+        ":can_api",
         "//libs/adc",
-        "//libs/can",
         "//libs/gpio",
         "//libs/timer",
     ],
+)
+
+can_api_files(
+    name = "can_api",
+    dbc = "//vehicle/mkv:mkv.dbc",
+    yaml = ":bspd.yml",
 )
