reformat BUILD file

--- a/vehicle/mkv/software/dashboard/BUILD
+++ b/vehicle/mkv/software/dashboard/BUILD
@@ -11,9 +11,9 @@ cc_firmware(
     ],
     visibility = ["//visibility:public"],
     deps = [
+        "//libs/adc",
         "//libs/can",
         "//libs/gpio",
         "//libs/timer",
-        "//libs/adc"
     ],
 )
