--- a/vehicle/mkv/BUILD
+++ b/vehicle/mkv/BUILD
@@ -8,5 +8,6 @@ dbc_gen(
         "//vehicle/mkv/software/air_control:air.yml",
         "//vehicle/mkv/software/brakelight_bspd:bspd.yml",
         "//vehicle/mkv/software/motor_controller:motor_controller.dbc",
+        "//vehicle/mkv/software/dashboard:dashboard.yml",
     ],
 )
