--- a/vehicle/mkv/software/dashboard/dashboard.yml
+++ b/vehicle/mkv/software/dashboard/dashboard.yml
@@ -1,12 +1,10 @@
 name: dashboard
 subscribe:
-- name: brakelight_bspd
-  mob: 0
+- name: brakelight
+  mob: 1
 - name: bms_core
-  mob: 1 
-- name: air_control_critical
   mob: 2 
-- name: air_control_sense
+- name: air_control_critical
   mob: 3 
 - name: throttle
   mob: 4 
