--- a/vehicle/mkv/software/throttle/BUILD
+++ b/vehicle/mkv/software/throttle/BUILD
@@ -1,3 +1,4 @@
+load("//bazel/tools:defs.bzl", "can_api_files")
 load("//bazel:defs.bzl", "cc_firmware")
 
 cc_firmware(
@@ -11,9 +12,16 @@ cc_firmware(
     ],
     visibility = ["//visibility:public"],
     deps = [
+    	":can_api",
         "//libs/adc",
         "//libs/can",
         "//libs/gpio",
         "//libs/timer",
     ],
+)
+
+can_api_files(
+    name = "can_api",
+    dbc = "//vehicle/mkv:mkv.dbc",
+    yaml = ":throttle.yml",
 )
