--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -7,12 +7,12 @@ on:
     - '**.kicad_pcb'
 
 jobs:
-  build_comment:
-  
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v2
-
     - name: build
       id: build_kicad
       run: |
