added shell script for site update

--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -50,9 +50,9 @@ jobs:
       with:
         path: build/comment.md
 
-    # - name: update_outline
-    #   if: ${{ github.event_name == 'push' }} # TODO
-    #   run: ./.github/update_kicad_outline.py
-    #   env:
-    #     url: 
-    #
+     - name: update_outline
+       if: ${{ github.event_name == 'push' }} 
+       run: ./.github/git-bazel-kicad.sh
+       env:
+         url: 
+    
