--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -1,7 +1,7 @@
 name: kicad-build
 
 on:
-  pull_request:
+  push:
     paths:
     - '**.sch'
     - '**.kicad_pcb'
@@ -39,7 +39,7 @@ jobs:
       run: ./.github/git-bazel-site-update.sh
       env:
         GITHUB_BASE_SHA: "${{ github.event.pull_request.base.sha }}"
-        
+
     - name: upload
       uses: BetaHuhn/do-spaces-action@v2
       with:
