--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -46,6 +46,12 @@ jobs:
         out_dir: kicad-artifacts
         versioning: false
 
+    - name: update_pcb_site
+      if: {{ github.event_name == 'push' }}
+      run: ./.github/git-bazel-site-update.sh
+      env: 
+        GITHUB_BASE_SHA: "${{ github.event.pull_request.base.sha }}"
+      
     - name: comment
       uses: marocchino/sticky-pull-request-comment@v2
       with:
