fixed syntax error

--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -47,7 +47,7 @@ jobs:
         versioning: false
 
     - name: update_pcb_site
-      if: {{ github.event_name == 'push' }}
+      if: ${{ github.event_name == 'push' }}
       run: ./.github/git-bazel-site-update.sh
       env: 
         GITHUB_BASE_SHA: "${{ github.event.pull_request.base.sha }}"
