added .sh to prev path

--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -17,6 +17,7 @@ jobs:
       run: |
         sudo apt install librsvg2-bin
         ./.github/git-bazel-kicad.sh
+        ./.github/git-bazel-site-update.sh
       env:
         GITHUB_BASE_SHA: "${{ github.event.pull_request.base.sha }}"
 
