Recover YAML file

--- a/vehicle/mkv/BUILD
+++ b/vehicle/mkv/BUILD
@@ -12,6 +12,7 @@ dbc_gen(
         "//vehicle/mkv/software/brakelight_bspd:bspd.yml",
         "//vehicle/mkv/software/dashboard:dashboard.yml",
         "//vehicle/mkv/software/emeter:emeter.dbc",
+        "//vehicle/mkv/software/throttle:throttle.yml",
         "//vehicle/mkv/software/motor_controller:motor_controller.dbc",
     ],
 )
