--- a/vehicle/mkv/software/throttle/BUILD
+++ b/vehicle/mkv/software/throttle/BUILD
@@ -1,6 +1,10 @@
 load("//bazel/tools:defs.bzl", "can_api_files")
 load("//bazel:defs.bzl", "cc_firmware")
 
+exports_files([
+    "throttle.yml",
+])
+
 cc_firmware(
     name = "throttle",
     srcs = [
