--- a/vehicle/mkv/BUILD
+++ b/vehicle/mkv/BUILD
@@ -6,6 +6,7 @@ dbc_gen(
     srcs = [
         "//vehicle/mkv/software/air_control:air.yml",
         "//vehicle/mkv/software/brakelight_bspd:bspd.yml",
+        "//vehicle/mkv/software/throttle:throttle.yml",
         "//vehicle/mkv/software/motor_controller:motor_controller.dbc",
     ],
 )
