--- a/vehicle/mkv/BUILD
+++ b/vehicle/mkv/BUILD
@@ -9,6 +9,7 @@ dbc_gen(
         "//vehicle/mkv/software/bms:bms.yml",
         "//vehicle/mkv/software/brakelight_bspd:bspd.yml",
         "//vehicle/mkv/software/dashboard:dashboard.yml",
+        "//vehicle/mkv/software/throttle:throttle.yml",
         "//vehicle/mkv/software/motor_controller:motor_controller.dbc",
     ],
 )
