--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -1,3 +1,4 @@
+
 name: kicad-build
 
 on:
@@ -26,6 +27,14 @@ jobs:
       with:
         format: 'csv'
 
+    - name: update_kicad_site
+      id: build_website
+      run: |
+        sudo apt install librsvg2-bin
+        ./.github/git-bazel-kicad-site-update.sh
+      env:
+        GITHUB_BASE_SHA: "${{ github.event.pull_request.base.sha }}"
+
     - name: rescue_check
       run: |
         if echo ${{ steps.files.outputs.added_modified }} | grep -q rescue; then
@@ -34,7 +43,6 @@ jobs:
         else
           exit 0
         fi
-
     - name: upload
       uses: BetaHuhn/do-spaces-action@v2
       with:
@@ -50,10 +58,4 @@ jobs:
       uses: marocchino/sticky-pull-request-comment@v2
       with:
         path: build/comment.md
-
-    # - name: update_outline
-    #   if: ${{ github.event_name == 'push' }} # TODO
-    #   run: ./.github/update_kicad_outline.py
-    #   env:
-    #     url: 
-    #
+      
