--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -27,7 +27,7 @@ jobs:
         format: 'csv'
 
     - name: update_kicad_site
-      #if: ${{ github.event_name == 'push' }}
+      if: ${{ github.event_name == 'push' }}
       run: ./.github/git-bazel-kicad-site.sh
       env:
         GITHUB_BASE_SHA: "${{ github.event.pull_request.base.sha }}"
