--- a/projects/hitl/boards_v2/primary_board/BUILD
+++ b/projects/hitl/boards_v2/primary_board/BUILD
@@ -2,4 +2,8 @@ load("//bazel:defs.bzl", "kicad_hardware")
 
 kicad_hardware(
     name = "hitl-primary",
+    schematic_files = ["primary_board.sch"] + glob(
+        ["*.sch"],
+        ["primary_board.sch"],
+    ),
 )
