--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -28,9 +28,13 @@ jobs:
         format: 'csv'
 
     - name: update_kicad_site
-      run: ./.github/git-bazel-kicad-site-update.sh
+      id: build_website
+      run: |
+        sudo apt install librsvg2-bin
+        ./.github/git-bazel-kicad-site-update.sh
       env:
         GITHUB_BASE_SHA: "${{ github.event.pull_request.base.sha }}"
+
     - name: rescue_check
       run: |
         if echo ${{ steps.files.outputs.added_modified }} | grep -q rescue; then
