--- a/vehicle/mkv/software/air_control/tests/BUILD
+++ b/vehicle/mkv/software/air_control/tests/BUILD
@@ -4,8 +4,8 @@ pytest_test(
     name = "tests",
     srcs = [
         "conftest.py",
-        # "test_initial_checks.py",
         "test_air.py",
+        "test_initial_checks.py",
     ],
     data = [
         "//vehicle/mkv:mkv.dbc",
