--- a/.github/workflows/kicad.yml
+++ b/.github/workflows/kicad.yml
@@ -51,6 +51,11 @@ jobs:
       with:
         path: build/comment.md
 
+    - name: update_outline
+      run: ./.github/git-bazel-site-update.sh
+      env:
+        GITHUB_BASE_SHA: "${{ github.event.pull_request.base.sha }}"
+
     # - name: update_outline
     #   if: ${{ github.event_name == 'push' }} # TODO
     #   run: ./.github/update_kicad_outline.py
