--- a/vehicle/mkv/BUILD
+++ b/vehicle/mkv/BUILD
@@ -5,6 +5,7 @@ dbc_gen(
     name = "mkv.dbc",
     srcs = [
         "//libs/can/test:test.yml",
+        "//vehicle/mkv/software/bms:bms.yml",
         "//vehicle/mkv/software/air_control:air.yml",
         "//vehicle/mkv/software/bms:bms.yml",
         "//vehicle/mkv/software/brakelight_bspd:bspd.yml",
