Add ATMega64m1 part support for Bazel

--- a/scripts/ldscripts/BUILD
+++ b/scripts/ldscripts/BUILD
@@ -2,9 +2,7 @@ package(
     default_visibility = ["//visibility:public"],
 )
 
-filegroup(
-    name = "atmega16m1",
-    srcs = [
-        "atmega16m1.ld",
-    ],
-)
+exports_files([
+    "atmega16m1.ld",
+    "atmega64m1.ld",
+])
