--- a/libs/timer/BUILD
+++ b/libs/timer/BUILD
@@ -13,9 +13,10 @@ cc_library(
     srcs = [
         "timer.c",
     ],
-    target_compatible_with = [
-        "//bazel/constraints:atmega16m1",
-    ],
+    target_compatible_with = select({
+        "//bazel/constraints:atmega16m1": [],
+        "//bazel/constraints:atmega64m1": [],
+    }),
     visibility = ["//visibility:public"],
     deps = [
         ":hdrs",
