--- a/vehicle/mkv/BUILD
+++ b/vehicle/mkv/BUILD
@@ -4,6 +4,7 @@ load("//bazel/tools:defs.bzl", "dbc_gen")
 dbc_gen(
     name = "mkv.dbc",
     srcs = [
+        "//libs/can/test:test.yml",
         "//vehicle/mkv/software/air_control:air.yml",
         "//vehicle/mkv/software/brakelight_bspd:bspd.yml",
         "//vehicle/mkv/software/motor_controller:motor_controller.dbc",
