--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,3 +32,7 @@ jobs:
 
     - name: Run clang-format
       run: git fetch origin main && ./scripts/clang-format.sh check
+
+    - uses: psf/black@stable
+    - name: Run black on diffed files
+      run: git diff --name-only $GITHUB_BASE_REF $GITHUB_HEAD_REF | grep "*.py" | xargs black
