--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,6 +33,8 @@ jobs:
     - name: Run clang-format
       run: git fetch origin main && ./scripts/clang-format.sh check
 
-    - uses: psf/black@stable
+    - name: Install black
+      run: sudo apt install black 
+      
     - name: Run black on diffed files
       run: git diff --name-only $GITHUB_BASE_REF $GITHUB_HEAD_REF | grep "*.py" | xargs black
