--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -35,6 +35,6 @@ jobs:
 
     - name: Install black
       run: sudo apt install black 
-      
+
     - name: Run black on diffed files
-      run: git diff --name-only $GITHUB_BASE_REF $GITHUB_HEAD_REF | grep "*.py" | xargs black
+      run: git diff --name-only origin/$GITHUB_BASE_REF origin/$GITHUB_HEAD_REF | grep ".py$" | xargs black --check
