--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -36,5 +36,5 @@ jobs:
     - name: Install black
       run: sudo apt install black 
 
-    - name: Run black on diffed files
+    - name: Run black on changed python files
       run: git diff --name-only origin/$GITHUB_BASE_REF..$(git rev-parse --short "$GITHUB_SHA") | grep ".py$" | xargs black --check
