--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,5 +1,9 @@
 load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
 
+exports_files([
+    ".avrduderc",
+])
+
 buildifier(
     name = "buildifier",
     tags = ["manual"],
