--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,3 +32,9 @@ jobs:
 
     - name: Run clang-format
       run: git fetch origin main && ./scripts/clang-format.sh check
+
+    - name: Install black
+      run: sudo apt install black 
+
+    - name: Run black on changed python files
+      run: git diff --name-only origin/$GITHUB_BASE_REF..$(git rev-parse --short "$GITHUB_SHA") | grep ".py$" | xargs black --check
