--- a/examples/shell/legacy/BUILD
+++ b/examples/shell/legacy/BUILD
@@ -1,13 +1,12 @@
 load("//bazel:defs.bzl", "cc_firmware")
 
 cc_firmware(
-    name = "shell",
+    name = "legacy",
     srcs = [
         "main.c",
     ],
-    target_compatible_with = ["//bazel/constraints:avr"],
+    visibility = ["//visibility:public"],
     deps = [
         "//libs/uart",
-        "//libs/gpio",
     ],
 )
