--- a/libs/can/BUILD
+++ b/libs/can/BUILD
@@ -19,6 +19,7 @@ cc_library(
     target_compatible_with = select({
         "//bazel/constraints:atmega16m1": [],
         "//bazel/constraints:atmega64m1": [],
+        "//conditions:default": ["//bazel/constraints:incompatible_mcu"],
     }),
     visibility = ["//visibility:public"],
     deps = [
