--- a/libs/gpio/BUILD
+++ b/libs/gpio/BUILD
@@ -13,10 +13,10 @@ cc_library(
     hdrs = [
         "pin_defs.h",
     ],
-    # target_compatible_with = ["//bazel/constraints:atmega16m1"],
     target_compatible_with = select({
         "//bazel/constraints:atmega16m1": [],
         "//bazel/constraints:atmega64m1": [],
+        "//conditions:default": ["//bazel/constraints:incompatible_mcu"],
     }),
     visibility = ["//visibility:public"],
     deps = [
