--- a/vehicle/mkv/software/lvbms/LTC6810/BUILD
+++ b/vehicle/mkv/software/lvbms/LTC6810/BUILD
@@ -1,7 +1,7 @@
 load("@rules_cc//cc:defs.bzl", "cc_library")
 
 cc_library(
-    name = "ltc6810",
+    name = "LTC6810",
     srcs = [
         "ltc6810.c",
     ],
