--- a/vehicle/mkv/software/bms/bms.yml
+++ b/vehicle/mkv/software/bms/bms.yml
@@ -1,15 +1,21 @@
-name: bms_core
-
+# The rest of this file will be fleshed out in the BMS code PR
+name: bms
 publish:
   - name: bms_core
     id: 0x10
-    freq_hz: 4
+    freq_hz: 100
     signals:
+      - name: pack_voltage
+        slice: 0 + 16
+        unit:
+          type: int16_t
+          name: V
+          offset: 0
+          scale: 10
       - name: bms_ok
-        slice: 0 + 2
+        slice: 16 + 2
         unit:
           type: bool
           values:
             t: BMS OK
             f: BMS NOT OK
-
