--- a/vehicle/mkv/software/bms/bms.yml
+++ b/vehicle/mkv/software/bms/bms.yml
@@ -149,38 +149,134 @@ publish:
           scale: 1
           offset: 0
 
- # - name: bms_temperature_1_1_4
- #   id: 0x58
- #   freq_hz: 4
- #   signals:
- #     - name: cell_4
- #       slice: 48 + 16
- #       unit:
- #         name: temp
- #         type: uint16_t
- #         offset: 0
- #         scale: 1
- #     - name: cell_3
- #       slice: 32 + 16
- #       unit:
- #         name: temp
- #         type: uint16_t
- #         offset: 0
- #         scale: 1
- #     - name: cell_2
- #       slice: 16 + 16
- #       unit:
- #         name: temp
- #         type: uint16_t
- #         offset: 0
- #         scale: 1
- #     - name: cell_1
- #       slice: 0 + 16
- #       unit:
- #         name: temp
- #         type: uint16_t
- #         offset: 0
- #         scale: 1
+  - name: bms_voltage_0
+    id: 0x410
+    freq_hz: 4
+    signals:
+      - name: cell_4
+        slice: 48 + 16
+        unit:
+          name: volts
+          type: uint16_t
+          offset: 0
+          scale: 0.0001
+      - name: cell_3
+        slice: 32 + 16
+        unit:
+          name: volts
+          type: uint16_t
+          offset: 0
+          scale: 0.0001
+      - name: cell_2
+        slice: 16 + 16
+        unit:
+          name: volts
+          type: uint16_t
+          offset: 0
+          scale: 0.0001
+      - name: cell_1
+        slice: 0 + 16
+        unit:
+          name: volts
+          type: uint16_t
+          offset: 0
+          scale: 0.0001
+  - name: bms_voltage_1
+    id: 0x411
+    freq_hz: 4
+    signals:
+      - name: cell_4
+        slice: 48 + 16
+        unit:
+          name: volts
+          type: uint16_t
+          offset: 0
+          scale: 0.0001
+      - name: cell_3
+        slice: 32 + 16
+        unit:
+          name: volts
+          type: uint16_t
+          offset: 0
+          scale: 0.0001
+      - name: cell_2
+        slice: 16 + 16
+        unit:
+          name: volts
+          type: uint16_t
+          offset: 0
+          scale: 0.0001
+      - name: cell_1
+        slice: 0 + 16
+        unit:
+          name: volts
+          type: uint16_t
+          offset: 0
+          scale: 0.0001
+  - name: bms_voltage_2
+    id: 0x412
+    freq_hz: 4
+    signals:
+      - name: cell_4
+        slice: 48 + 16
+        unit:
+          name: volts
+          type: uint16_t
+          offset: 0
+          scale: 0.0001
+      - name: cell_3
+        slice: 32 + 16
+        unit:
+          name: volts
+          type: uint16_t
+          offset: 0
+          scale: 0.0001
+      - name: cell_2
+        slice: 16 + 16
+        unit:
+          name: volts
+          type: uint16_t
+          offset: 0
+          scale: 0.0001
+      - name: cell_1
+        slice: 0 + 16
+        unit:
+          name: volts
+          type: uint16_t
+          offset: 0
+          scale: 0.0001
+  - name: bms_voltage_3
+    id: 0x413
+    freq_hz: 4
+    signals:
+      - name: cell_4
+        slice: 48 + 16
+        unit:
+          name: volts
+          type: uint16_t
+          offset: 0
+          scale: 0.0001
+      - name: cell_3
+        slice: 32 + 16
+        unit:
+          name: volts
+          type: uint16_t
+          offset: 0
+          scale: 0.0001
+      - name: cell_2
+        slice: 16 + 16
+        unit:
+          name: volts
+          type: uint16_t
+          offset: 0
+          scale: 0.0001
+      - name: cell_1
+        slice: 0 + 16
+        unit:
+          name: volts
+          type: uint16_t
+          offset: 0
+          scale: 0.0001
  # - name: bms_temperature_1_5_8
  #   id: 0x59
  #   freq_hz: 4
