--- a/vehicle/mkv/software/bms/BUILD
+++ b/vehicle/mkv/software/bms/BUILD
@@ -48,8 +48,25 @@ cc_firmware(
     ],
 )
 
-package(
-    default_visibility = ["//visibility:public"],
+cc_firmware(
+    name = "temperature_test",
+    srcs = [
+        "temperature_testing.c",
+    ],
+    target_compatible_with = [
+        "//bazel/constraints:atmega16m1",
+    ],
+    deps = [
+        ":bms_config",
+        ":can_api",
+        "//libs/adc",
+        "//libs/gpio",
+        "//libs/spi",
+        "//libs/timer",
+        "//vehicle/mkv/software/bms/ltc6811",
+        "//vehicle/mkv/software/bms/tasks:bms_tasks",
+        "//vehicle/mkv/software/bms/utils",
+    ],
 )
 
 exports_files([
