Add BMS sensing yaml generator

--- a/vehicle/mkv/BUILD
+++ b/vehicle/mkv/BUILD
@@ -12,5 +12,6 @@ dbc_gen(
         "//vehicle/mkv/software/dashboard:dashboard.yml",
         "//vehicle/mkv/software/emeter:emeter.dbc",
         "//vehicle/mkv/software/motor_controller:motor_controller.dbc",
+        "//vehicle/mkv/software/bms/tools:bms_sensing.yml",
     ],
 )
