Post-rebase fixes

--- a/vehicle/mkv/software/bms/tools/BUILD
+++ b/vehicle/mkv/software/bms/tools/BUILD
@@ -12,7 +12,7 @@ py_binary(
 )
 
 genrule(
-    name = "bms_sensing.yml",
+    name = "bms_sensing_yml",
     srcs = [
         "//vehicle/mkv/software/bms:bms_config.h",
     ],
