Add support for ATMega64m1

--- a/bazel/constraints/BUILD
+++ b/bazel/constraints/BUILD
@@ -15,7 +15,17 @@ constraint_value(
 )
 
 constraint_value(
+    name = "atmega64m1",
+    constraint_setting = ":mcu",
+)
+
+constraint_value(
     name = "atmega328p",
+    constraint_setting = ":mcu",
+)
+
+constraint_value(
+    name = "incompatible_mcu",
     constraint_setting = ":mcu",
 )
 
