--- a/.bazelrc
+++ b/.bazelrc
@@ -10,6 +10,9 @@ build:16m1 --config=m16m1-avr
 build:m328p-avr --platforms=//bazel/platforms:atmega328p_avr
 build:328p --config=m328p-avr
 
+build:64m1-avr --platforms=//bazel/platforms:atmega64m1_avr
+build:64m1 --config=64m1-avr
+
 # Test target
 build:avr-test-sim --platforms=//bazel/platforms:avr_test_sim
 
