--- a/libs/can/test/BUILD
+++ b/libs/can/test/BUILD
@@ -15,9 +15,11 @@ can_api_files(
 cc_firmware(
     name = "test_app",
     srcs = ["test_app.c"],
-    target_compatible_with = [
-        "//bazel/constraints:atmega16m1",
-    ],
+    target_compatible_with = select({
+        "//bazel/constraints:atmega16m1": [],
+        "//bazel/constraints:atmega64m1": [],
+        "//conditions:default": ["//bazel/constraints:incompatible_mcu"],
+    }),
     visibility = ["//visibility:public"],
     deps = [
         ":test_can_api",
