--- a/libs/uart/BUILD
+++ b/libs/uart/BUILD
@@ -13,9 +13,12 @@ cc_library(
     srcs = [
         "uart.c",
     ],
-    target_compatible_with = [
-        "//bazel/constraints:atmega16m1",
-    ],
+    target_compatible_with = select({
+        "//bazel/constraints:atmega16m1": [],
+        "//bazel/constraints:atmega64m1": [],
+        "//bazel/constraints:atmega328p": [],
+        "//conditions:default": ["//bazel/constraints:incompatible_mcu"],
+    }),
     visibility = ["//visibility:public"],
     deps = [
         ":hdrs",
