Add more expressive platforms for hardware

--- a/.bazelrc
+++ b/.bazelrc
@@ -16,6 +16,10 @@ build:64m1 --config=64m1-avr
 # Test target
 build:avr-test-sim --platforms=//bazel/platforms:avr_test_sim
 
+build:hitl-firmware-test --platforms=//bazel/platforms:hitl_firmware_test
+
+build:hackerboard --platforms=//bazel/platforms:hackerboard
+
 # Host target
 build:linux-x86_64 --platforms=//bazel/platforms:linux-x86_64
 
@@ -26,3 +30,6 @@ build:docker-kicad --experimental_docker_verbose
 build:docker-kicad --experimental_enable_docker_sandbox
 build:docker-kicad --incompatible_strict_action_env=true
 build:docker-kicad --experimental_docker_image=setsoft/kicad_auto
+
+# Because I can never remember the order...
+build:kicad-docker --config=docker-kicad
