--- a/bazel/platforms/BUILD
+++ b/bazel/platforms/BUILD
@@ -17,6 +17,14 @@ platform(
 )
 
 platform(
+    name = "atmega64m1_avr",
+    constraint_values = [
+        "//bazel/constraints:atmega64m1",
+    ],
+    parents = [":avr_common"],
+)
+
+platform(
     name = "atmega328p_avr",
     constraint_values = [
         "//bazel/constraints:atmega328p",
@@ -30,6 +38,28 @@ platform(
         "//bazel/constraints:test_sim",
         "@platforms//os:linux",
         "@platforms//cpu:x86_64",
+    ],
+)
+
+platform(
+    name = "hitl_firmware_test",
+    constraint_values = [
+        "//bazel/constraints:atmega64m1",
+        "//bazel/constraints:hitl",
+    ],
+    parents = [
+        ":avr_common",
+    ],
+)
+
+platform(
+    name = "hackerboard",
+    constraint_values = [
+        "//bazel/constraints:atmega16m1",
+        "//bazel/constraints:hackerboard",
+    ],
+    parents = [
+        ":avr_common",
     ],
 )
 
