--- a/vehicle/mkv/software/throttle/throttle.yml
+++ b/vehicle/mkv/software/throttle/throttle.yml
@@ -58,3 +58,21 @@ publish:
           values:
             t: E-stop shutdown node closed
             f: E-stop shutdown node open
+  - name: throttle_debug
+    id: 0x5C0
+    freq_hz: 100
+    signals:
+      - name: throttle_r_raw
+        slice: 0 + 16
+        unit:
+          type: int16_t
+          name: 'counts'
+          offset: 0
+          scale: 1
+      - name: throttle_l_raw
+        slice: 16 + 16
+        unit:
+          type: int16_t
+          name: 'counts'
+          offset: 0
+          scale: 1
