Add BMS firmware (#107)
* Add initial LTC6811 files from Linduino

* Updated names and integrated with Bazel

* Integrate SPI library to ltc6811

* Clean up LTC6811 libraries and format

* Update a few outdated things

* Begin work on new BMS image

* Add mux code

* Add ATmega64m1 target for Bazel

* Add CAN message support for voltage sensing

Temp sensing is still WIP

* Add under/over voltage checks in voltage task

* Add fault state checking for initial_checks

* Add BMS YML file to MKV BUILD

* fmt

* Fix weird struct declaration

* Refactor BSP files

* Add ATMega64m1 part support for Bazel

* Fix compatibility issues in libraries

* Small fixes and updates

* Remove CS_PIN definition in LTC681x library

* Format

* Flesh out CAN send and temperature tasks

* Update metrics collection and bazel constraints

* Add current sensing

* format

* Fix bazel compatibility issues

* Update bms signals in dashboard code

* Fix dashboard issue

* Fix issue calculating pack voltage

* Refactor code into utils and tasks folders

* Format

* Implement BMS state machine

* --wip-- [skip ci]

* Fix timed loop issue

* Migrate entirely to state machine function

* Format

* Fix bms CAN issue in dashboard code

* Add charging functionality and flesh out state machine

* Fix CAN double-transmit bug

* Update .avrduderc

* Working MISO checkpoint

* Fix SPI issues

* Save point. Need to change memory architecture

* Refactor voltage task for memory use

* Refactor temperature task for memory efficiency

* Refactor mux library for memory usage

* Working refactored voltage checkpoint

* format

* Update code to fix muxes and temperature reading

* Remove -F flag for bazel flashing

* Fix mux issues

* Format

* Fix mux issue

* Fix issues with not disabling muxes

* Remove extra mux disables

* Testing fan PWM

* Add temperature testing file for testing peripherals



--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -34,7 +34,7 @@ jobs:
       run: git fetch origin main && ./scripts/clang-format.sh check
 
     - name: Install black
-      run: sudo apt install black 
+      run: pip install black
 
     - name: Run black on changed python files
-      run: git diff --name-only origin/$GITHUB_BASE_REF..$(git rev-parse --short "$GITHUB_SHA") | grep ".py$" | xargs black --check
+      run: git diff --name-only origin/$GITHUB_BASE_REF..$(git rev-parse --short "$GITHUB_SHA") | grep ".py$" | xargs black --check --diff
